# sdkrs

./: .editorconfig  .gitignore  .rustfmt.toml  Cargo.toml  Makefile  README.md  deny.toml  rust-toolchain  rust-toolchain.toml
.cargo/: config.toml
.github/: codecov.yml  renovate.json
.github/workflows/: build-android.yml  lint.yml  rust-clippy.yml
crates/sdkrs-core/: Cargo.toml  uniffi.toml
crates/sdkrs-core/src/: lib.rs
crates/sdkrs-core/src/dynamic_image/: mod.rs  options.rs
crates/sdkrs-core/src/nephele_image/: mod.rs  options.rs
crates/sdkrs-uniffi/: Cargo.toml  uniffi.toml
crates/sdkrs-uniffi/src/: error.rs  lib.rs
crates/sdkrs-wasm/: Cargo.toml  README.md  build.sh
crates/sdkrs-wasm/src/: lib.rs
crates/uniffi-bindgen/: Cargo.toml
languages/js/example/: index.js  package.json
languages/js/sdk-client/: package.json
languages/js/sdk-client/src/: client.ts  schemas.ts
languages/js/wasm/: .gitignore  bitwarden_wasm.d.ts  bitwarden_wasm.js  bitwarden_wasm_bg.js  bitwarden_wasm_bg.wasm.d.ts  index.js  package.json
languages/js/wasm/node/: bitwarden_wasm.js
languages/kotlin/: README.md  build-schemas.sh  build.gradle  gradle.properties  settings.gradle
languages/kotlin/app/: build.gradle
languages/kotlin/app/src/main/: AndroidManifest.xml
languages/kotlin/app/src/main/java/com/bitwarden/myapplication/: Biometrics.kt
languages/kotlin/app/src/main/java/com/bitwarden/myapplication/ui/theme/: Theme.kt
languages/kotlin/app/src/main/java/com/sdkrs/myapplication/: MainActivity.kt
languages/kotlin/app/src/main/java/com/sdkrs/myapplication/ui/theme/: Color.kt  Type.kt
languages/kotlin/sdk/: build.gradle  lint-baseline.xml
languages/kotlin/sdk/src/test/java/com/sdkrs/sdk/: ExampleUnitTest.kt
languages/swift/: Package.swift  README.md  build.sh
languages/swift/Tests/SdkrsSdkTests/: SdkrsSdkTests.swift
languages/swift/iOS/App/: ContentView.swift
languages/swift/iOS/App.xcodeproj/: project.pbxproj
languages/swift/iOS/App.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
