[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["feng.w <feng.w@trip.com>"]
repository = "https://github.com/fw6/imagekit"
license = "Unlicense OR MIT"
rust-version = "1.78"

[workspace.lints.clippy]
too_many_arguments = "allow"

[workspace.dependencies]
thiserror = "1.0"

derive_builder = "0.20"
regex = "1.10"
lazy_static = "1.4.0"
serde = "1.0.196"
log = "0.4.20"
env_logger = "0.11.1"

uniffi = "0.28"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2

[profile.release]
# https://doc.rust-lang.org/cargo/reference/profiles.html#debug
debug = true
opt-level = "s"
lto = "thin"
codegen-units = 1
strip = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
