[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["feng.w <feng.w@trip.com>"]
repository = "https://github.com/fw6/imagekit"
license = "Unlicense OR MIT"
rust-version = "1.78"

[workspace.lints.clippy]
too_many_arguments = "allow"
unused_async = "deny"
unwrap_used = "deny"

[workspace.dependencies]
thiserror = "1.0"

derive_builder = "0.20"
regex-lite = "0.1"
lazy_static = "1.4.0"

log = "0.4.20"
env_logger = "0.11.1"

uniffi = "=0.28.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2

[profile.release]
lto = "thin"
codegen-units = 1
