[package]
name = "sdkrs-core"
description = """
Internal crate for the other crates. Do not use.
"""
keywords = ["sdkrs"]

version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["builder"]
uniffi = ["dep:uniffi"]
builder = ["dep:derive_builder"]

[dependencies]
thiserror.workspace = true
regex-lite.workspace = true
lazy_static.workspace = true
wasm-bindgen = { version = "0.2.91" }

derive_builder = { workspace = true, optional = true }
uniffi = { workspace = true, optional = true }

[lints]
workspace = true
