[package]
name = "sdkrs-uniffi"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
bench = false

[dependencies]
sdkrs-core = { path = "../sdkrs-core", features = ["uniffi"] }
uniffi.workspace = true
log.workspace = true
env_logger.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"

[target.'cfg(target_os = "ios")'.dependencies]
oslog = "0.2.0"

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[lints]
workspace = true
